fixed styling issues such as unresponsiveness and bad alignment.

--- a/src/sass/globals/_footer.scss
+++ b/src/sass/globals/_footer.scss
@@ -1,9 +1,11 @@
 footer {
     background-color: white;
     color: #000;
-    padding: 1em;
-    padding-inline: 1.5em;
-    position: relative;
+
+    .bottom-wrapper {
+        padding: 0;
+        padding-block: 1em;
+    }
 
     .social-links {
         display: flex;
